--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --watch",
     "start": "node app"
   },
   "author": "",
@@ -14,5 +14,11 @@
     "express-handlebars": "^1.1.0",
     "morgan": "^1.5.0",
     "request": "^2.51.0"
+  },
+  "devDependencies": {
+    "zombie": "^2.0.4",
+    "mocha": "^1.21.4",
+    "chai": "^1.9.1"
   }
+
 }
