--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "react": "~0.12.2"
+    "react": "~0.12.2",
+    "bskyb-typography": "~0.1.0"
   }
 }
