--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "zombie": "^2.0.4",
     "mocha": "^1.21.4",
     "chai": "^1.9.1",
-    "react-tools": "^0.12.2"
+    "react-tools": "^0.12.2",
+    "bower": "^1.3.12"
+  },
+  "scripts": {
+      "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
