--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha --watch",
-    "start": "nohup ./node_modules/.bin/jsx --watch src/ public/ & node app"
+    "start": "nohup ./node_modules/.bin/jsx --watch src/ public/ & node app",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "author": "",
   "license": "ISC",
@@ -15,16 +16,13 @@
     "morgan": "^1.5.0",
     "request": "^2.51.0",
     "cors": "^2.5.2",
-    "node-sass-middleware": "^0.4.0"
+    "node-sass-middleware": "^0.4.0",
+    "bower": "^1.3.12"
   },
   "devDependencies": {
     "zombie": "^2.0.4",
     "mocha": "^1.21.4",
     "chai": "^1.9.1",
-    "react-tools": "^0.12.2",
-    "bower": "^1.3.12"
-  },
-  "scripts": {
-      "postinstall": "./node_modules/bower/bin/bower install"
+    "react-tools": "^0.12.2"
   }
 }
